# codex

./: .ansible-lint  .coverage  .dockerignore  .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .schemas  ARCHITECTURE_REFACTOR_TODO.md  CLAUDE.md  DECOUPLE_REPORTING.md  DEVELOPER_GUIDE.md  Dockerfile  GEMINI.md  Justfile  Makefile  README.md  TODO.md  Update-NetworkDevices.ps1  VMWARE_STIG_REFACTOR_TODO.md  ansible-vcsa.cfg  ansible.cfg  codex.code-workspace  design_tokens.yaml  flake.nix  improvements.md  justfile  ncs-ansible.code-workspace  ncs-framework.code-workspace  pve-spice (1).vv  pve-spice (2).vv  pve-spice.vv  pyproject.toml  requirements.txt  requirements.yml  role_composable_refactor_guide.md  ruff.toml  schedules.yml  shared.just  (+2 more)
ansible-ncs-clean/: Justfile  ansible-vcsa.cfg  ansible.cfg  pyproject.toml  requirements.yml
ansible-ncs-clean/files/ncs_reporter_configs/: config.yaml  linux.yaml  photon.yaml  platforms.yaml  vcenter.yaml
ansible-ncs-clean/playbooks/: photon_stig_audit.yml  photon_stig_remediate.yml  site_collect_only.yml  ubuntu_patch.yml  ubuntu_patch_apply.yml  ubuntu_stig_remediate_apply.yml  ubuntu_stig_verify.yml  vmware_audit.yml  vmware_vcsa_stig_remediate.yml  vmware_vm_stig_audit.yml  vmware_vm_stig_remediate.yml  windows_post_patch_audit.yml  windows_stig_audit.yml  windows_update.yml
ansible-ncs-clean/playbooks/templates/: smb.conf.j2
ansible-ncs-clean/scripts/: setup-venv-vcsa.sh  verify_report_artifacts.py
libs/ncs_core/: pyproject.toml
ncs-ansible/: .schemas  Justfile  ansible.cfg  failing.txt  pyproject.toml  requirements-network.yml  requirements-vcsa.txt  requirements.yml  roles  shared.just  still_failing.txt
ncs-ansible/collections_vcsa/ansible_collections/: internal
ncs-ansible/docker/: entrypoint.sh  smoke.sh
ncs-ansible/docs/: SCHEDULING_AND_ALERT_ACTIONS.md  VAULT_LABELED_GROUPS.md
ncs-ansible/files/: krb5.conf.example
ncs-ansible/inventory/production/: ise_servers.yaml  photon_servers.yaml  ubuntu_servers.yaml  windows_servers.yaml
ncs-ansible/ncs_configs/: config.yaml  inventory_root.yaml  schedules.yml
ncs-ansible/ncs_configs/ncs-reporter/: config.yaml  photon.yaml
ncs-ansible/playbooks/: README.md  TODO.md  site.yml  site_collect_and_alert.yml  site_collect_only.yml  site_stig_audit.yml
ncs-ansible/playbooks/core/: generate_reports.yml  manage_schedules.yml  send_alert_email.yml  setup_env.yml
ncs-ansible/playbooks/vmware/: owner_digest.yml
ncs-ansible/scripts/: configure_vscode_paths.py  regenerate_site_playbooks.py  verify_fqcn_contract.py  verify_report_artifacts.py
ncs-reporter/: PATH_CONVENTIONS.md  README.md  generate_schema.py  justfile  pyproject.toml
ncs-reporter/schemas/: alert_list_schema.json  ncs_reporter_config_schema.json  report_schema.json
ncs-reporter/scripts/: lint_configs.py
ncs-reporter/src/ncs_reporter/: _cklb.py  _cli_all.py  _cli_platform.py  _cli_stig_cklb.py  _config.py  _renderers.py  _report_context.py  _schema_utils.py  _stig_apply.py  aggregation.py  alerts.py  cli.py  constants.py  minify.py  platform_registry.py  primitives.py  schema_loader.py
ncs-reporter/tests/: conftest.py  generate_example_reports.py  test_aggregation.py  test_artifact_structure_e2e.py  test_cklb_export.py  test_cli.py  test_compact_syntax.py  test_example_data_contracts.py  test_history_orchestration.py  test_html_reports_e2e.py  test_new_features_e2e.py  test_node_path.py  test_normalize_dsl_guardrails.py  test_schema_driven.py  test_stig_apply.py  test_stig_e2e.py  test_stig_xml_to_cklb.py  test_tree.py  test_tree_layout_e2e.py  test_tree_render.py  test_view_model_site.py  test_view_model_stig.py  test_vmware_contracts.py  test_vsphere_graph_tree.py
ncs-reporter/tests/fixtures/: _assemble_contracts.py  advanced_schema.yaml  example_data.py
ncs-reporter/tests/ncs_example_reports/: search_index.js  site_health_report.html  stig_fleet_report.html
ncs_ansible/: .ansible-lint  .gitlab-ci.yml  CAUTIOUS_STIG_REMEDIATION_OPTION_PLAN.md  README.md  TODO.md  ansible.cfg  e2e-tests.md  justfile  platforms.yaml  pyproject.toml  requirements.yml
ncs_ansible/.claude/: settings.local.json
ncs_ansible/files/ncs_reporter_configs/: config.yaml  platforms.yaml  vcenter.yaml
ncs_ansible/inventory/production/: hosts.yaml
ncs_ansible/inventory/simulation/: hosts.yaml
ncs_ansible/playbooks/: README.md  generate_reports.yml  setup_samba.yml  site_remediate.yml  site_stig_audit.yml  site_vmware_only.yml  ubuntu_audit.yml  ubuntu_remediate.yml  ubuntu_remediate_apply.yml  ubuntu_stig_audit.yml  vmware_audit.yml  vmware_esxi_audit.yml  vmware_esxi_stig_audit.yml  vmware_esxi_stig_remediate.yml  vmware_stig_audit.yml  vmware_stig_remediate.yml  vmware_vcenter_audit.yml  vmware_vcsa_stig_audit.yml  vmware_vcsa_stig_remediate.yml  vmware_vm_audit.yml  vmware_vm_stig_audit.yml  vmware_vm_stig_remediate.yml  windows_audit.yml  windows_patch.yml  windows_stig_remediate.yml
ncs_ansible/playbooks/group_vars/: all.yml
ncs_ansible/schemas/: windows.yaml
ncs_ansible/scripts/: generate_mock_production_stig_run.py  replay_mock_artifacts_via_ansible.py  sync_path_contract.py  verify_report_artifacts.py
ncs_ansible/tests/integration/: _paths.py  conftest.py  test_artifact_pipeline.py  test_full_reporting_pipeline_e2e.py  test_local_config.py  test_playbook_config.py  (+1 more)
ncs_reporter/: ENVELOPE_CONTRACT.md  PATH_CONVENTIONS.md  README.md  generate_schema.py  justfile  pyproject.toml
ncs_reporter/schemas/: alert_list_schema.json  report_schema.json
ncs_reporter/scripts/: lint_configs.py
ncs_reporter/tests/: generate_example_reports.py  test_aggregation.py  test_artifact_structure_e2e.py  test_cklb_export.py  test_cli.py  test_compact_syntax.py  test_example_data_contracts.py  test_html_reports_e2e.py  test_minify.py  test_new_features_e2e.py  test_normalization_stig.py  test_platform_registry.py  test_report_schema.py  test_schema_driven.py  test_stig_apply.py  test_stig_e2e.py  test_stig_xml_to_cklb.py  test_view_model_site.py  test_view_model_stig.py  test_vmware_contracts.py
(+3056 files in other folders)
