[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ncs-reporter"
version = "0.1.0"
description = "Standalone reporting CLI for NCS (Codex)"
dependencies = [
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "pydantic>=2.0",
    "minify-html>=0.15.0",
]
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "mypy>=1.20.2",
    "pytest>=8.0",
    "ruff>=0.15.12",
    "types-pyyaml>=6.0.12.20260408",
]

[project.scripts]
ncs-reporter = "ncs_reporter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    # Jinja2's lexer calls bytes.decode("unicode-escape") on string-literal
    # tokens, which warns on regex shorthand like `\d` and `\]` even though
    # the resulting regex is valid. The warning is fundamental to Jinja's
    # tokenizer; rewriting our regexes around it would hurt readability.
    "ignore:invalid escape sequence:DeprecationWarning:jinja2.lexer",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
ignore_missing_imports = true
strict = true

[tool.basedpyright]
typeCheckingMode = "standard"
include = ["src"]
venvPath = "."
venv = ".venv"
reportExplicitAny = false
reportAny = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportMissingParameterType = false
reportMissingTypeArgument = false
