[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ncs-core"
version = "0.1.0"
description = "Shared primitives and aggregation helpers for NCS"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
